task5/tests/hw5-tests/output/t2.out
lli: <stdin>:27:15: error: use of undefined value '%-21925'
%t3 = zext i8 %-21925 to i32
              ^

